# ubuntu-desktop-cockpit

./: .gitignore  Cargo.toml  LICENSE  PROJECT_PLAN.md  README.md
crates/cockpit-app/: Cargo.toml
crates/cockpit-app/src/: main.rs
crates/cockpit-calendar/: Cargo.toml
crates/cockpit-calendar/src/: lib.rs
crates/cockpit-config/: Cargo.toml
crates/cockpit-config/src/: lib.rs
crates/cockpit-core/: Cargo.toml
crates/cockpit-core/src/: lib.rs
crates/cockpit-domain/: Cargo.toml
crates/cockpit-domain/src/: lib.rs
crates/cockpit-notes/: Cargo.toml
crates/cockpit-notes/src/: lib.rs
crates/cockpit-system/: Cargo.toml
crates/cockpit-system/src/: lib.rs
crates/cockpit-ui-gtk/: Cargo.toml
crates/cockpit-ui-gtk/assets/: style.css
crates/cockpit-ui-gtk/src/: lib.rs
docs/: architecture.md  decisions.md  roadmap.md
examples/: config.example.toml  config.google-oauth.toml  today.example.md
