[package]
name = "cockpit-calendar"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
base64 = "0.22"
chrono.workspace = true
cockpit-domain = { path = "../cockpit-domain" }
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde.workspace = true
serde_json = "1"
sha2 = "0.10"
thiserror.workspace = true
urlencoding = "2"
